/* 
  Localizable.strings
  AnyImageKit

  Created by 刘栋 on 2019/12/24.
  Copyright © 2019 AnyImageProject.org. All rights reserved.
*/

"OK" = "OK";
"Back" = "Back";
"Done" = "Done";
"Edit" = "Edit";
"Alert" = "Alert";
"Cancel" = "Cancel";
"Preview" = "Preview";
