/* 
  Localizable.strings
  AnyImageKit

  Created by 蒋惠 on 2019/9/16.
  Copyright © 2019 AnyImageProject.org. All rights reserved.
*/

"Photo" = "Photo";
"Video" = "Video";
"Live photo" = "Live photo";
"Original image" = "Original image";
"Select photo" = "Select photo";
"Unselect photo" = "Unselect photo";
"Take photo" = "Take photo";
"Select a maximum of %zd photos" = "Select a maximum of %zd photos";
"Downloading from iCloud" = "Downloading from iCloud";
"Fetch failed, please retry" = "Fetch failed, please retry";
"Switch album, current album is %@" = "Switch album, current album is %@";
