/* 
  Localizable.strings
  AnyImageEditor

  Created by 蒋惠 on 2019/11/8.
  Copyright © 2020 AnyImageProject.org. All rights reserved.
*/

// Picker
"OpenPicker" = "Open picker";
"Theme" = "Theme";
"SelectLimit" = "Select Limit";
"ColumnNumber" = "Column Number";
"UseOriginalImage" = "Use Original Image";
"QuickPick" = "QuickPick";
"SelectOptions" = "Select Options";
"AlbumOptions" = "Album Options";
"OrderByDate" = "Order By Date";
"EditorOptions" = "Editor Options";
"CaptureOptions" = "Capture Options";
"FullScreen" = "Full Screen";

// Editor
"OpenEditor" = "Open editor";
"EditOptions" = "Edit Options";
"PenWidth" = "Pen Width";
"MosaicOptions" = "Mosaic Options";
"MosaicWidth" = "Mosaic Width";
"MosaicLevel" = "Mosaic Level";
"CropOptions" = "Crop Options";

// Capture
"OpenCamera" = "Open camera";
"MediaOptions" = "Media Options";
"PreferredPresets" = "Preferred Presets";
"PhotoAspectRatio" = "Photo Aspect Ratio";
"PreferredPositions" = "Preferred Positions";
"FlashMode" = "Flash Mode";
"VideoMaximumDuration" = "Video Maximum Duration";
